--- a/signup.html
+++ b/signup.html
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-light gradient-background2">
         <div class="container">
             <a class="navbar-brand me-2" href="index.html">
-                <img src="./images/book.png" height="32" alt="Skill Swap Logo" loading="lazy">
+                <img src="logo.png" height="32" alt="Skill Swap Logo" loading="lazy">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarButtons">
                 <span class="navbar-toggler-icon"></span>
