--- a/login.html
+++ b/login.html
@@ -18,6 +18,7 @@
             100% { background-position: 0% 50%; }
         }
         .login-container {
+            background: linear-gradient(to right, #e0f7fa, #ab9bad);
             max-width: 400px;
             margin: 100px auto;
             padding: 30px;
@@ -31,7 +32,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-light gradient-background2">
         <div class="container">
             <a class="navbar-brand me-2" href="index.html">
-                <img src=".logo.png" height="32" alt="Skill Swap Logo" loading="lazy">
+                <img src="logo.png" height="32" alt="Skill Swap Logo" loading="lazy">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarButtons">
                 <span class="navbar-toggler-icon"></span>
@@ -89,7 +90,7 @@
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
             </ul>
-            <p class="text-center text-body-secondary">© 2023 Skill-Swap-Network</p>
+            <p class="text-center text-body-secondary">© 2025 Skill-Swap-Network</p>
         </footer>
     </div>
 </body>
