--- a/Index.html
+++ b/Index.html
@@ -57,7 +57,7 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
+    <!-- Head Section -->
     <div class="px-4 pt-5 my-0 text-center border-bottom gradient-background2">
         <h1 class="display-4 fw-bold text-white">SKILL SWAP NETWORK</h1>
         <div class="col-lg-6 mx-auto">
@@ -108,7 +108,7 @@
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
             </ul>
-            <p class="text-center text-body-secondary">© 2023 Skill-Swap-Network</p>
+            <p class="text-center text-body-secondary">© 2025 Skill-Swap-Network</p>
         </footer>
     </div>
 </body>
