--- a/signup.html
+++ b/signup.html
@@ -18,6 +18,7 @@
             100% { background-position: 0% 50%; }
         }
         .signup-container {
+            background: linear-gradient(to right, #e0f7fa, #ab9bad);
             max-width: 500px;
             margin: 50px auto;
             padding: 30px;
@@ -111,7 +112,7 @@
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
             </ul>
-            <p class="text-center text-body-secondary">© 2023 Skill-Swap-Network</p>
+            <p class="text-center text-body-secondary">© 2025 Skill-Swap-Network</p>
         </footer>
     </div>
 </body>
